<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/thxscroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dip" >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/thx_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gratitude_text" />

    <Button
        android:id="@+id/market_rate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="rateButtonClick"
        android:text="@string/rate" />

        <Button
            android:id="@+id/no_thanks_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="noThanksButtonClick"
            android:text="@string/no_thanks" />
    </LinearLayout>

</ScrollView>